Fix issue with captions wrapped in H2 receiving bold text

--- a/assets/stylesheets/_article.scss
+++ b/assets/stylesheets/_article.scss
@@ -203,6 +203,7 @@ h2 {
 .figure-caption {
     padding: 18px 18px;
     font-size: 13px;
+    font-weight: 400;
     line-height: 18px;
     color: $clr-captionText;
     border-bottom: 1px solid $clr-border;
